# SysTool

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  configure.ac  make-dist-test
man/: systool.man  systool.md  systool.texi
src/: systool
systool-1.0/: Makefile.in  README  configure  configure.ac
systool-1.0/_build/sub/: Makefile
systool-1.0/man/: systool.man
systool-1.0/src/: systool
